# ChangeLog for sys-power/cpufrequtils
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-power/cpufrequtils/ChangeLog,v 1.50 2010/03/31 21:32:11 abcd Exp $

  31 Mar 2010; Jonathan Callen <abcd@gentoo.org> cpufrequtils-007.ebuild:
  Bump to EAPI=3, add prefix keywords

*cpufrequtils-007 (16 Jan 2010)

  16 Jan 2010; Mike Frysinger <vapier@gentoo.org> +cpufrequtils-007.ebuild,
  +files/cpufrequtils-007-build.patch, +files/cpufrequtils-007-nls.patch:
  Version bump.

  15 Jan 2010; Mike Frysinger <vapier@gentoo.org> cpufrequtils-006.ebuild,
  -files/cpufrequtils-006-modprobe-gov.patch:
  Drop the modprobe patch since the kernel handles this for us
  automatically.

*cpufrequtils-006 (15 Jan 2010)

  15 Jan 2010; Mike Frysinger <vapier@gentoo.org>
  +files/cpufrequtils-conf.d-006, +files/cpufrequtils-init.d-006,
  +cpufrequtils-006.ebuild, +files/cpufrequtils-006-modprobe-gov.patch,
  +files/cpufrequtils-006-nls.patch:
  Version bump #292246 by gionnico with updated NLS patch by Lars Wendler
  and a more flexible init.d script #179729 by Oliver Koch.

  15 Jan 2010; Mike Frysinger <vapier@gentoo.org>
  cpufrequtils-005-r1.ebuild:
  add ia64 love.

  11 Jul 2009; Joseph Jezak <josejx@gentoo.org> cpufrequtils-005-r1.ebuild:
  Marked ppc/ppc64 stable for bug #256599.

  07 Jun 2009; Raúl Porcel <armin76@gentoo.org> cpufrequtils-005-r1.ebuild:
  arm/sparc stable wrt #256599

  03 Jun 2009; Dawid Węgliński <cla@gentoo.org>
  cpufrequtils-005-r1.ebuild:
  Stable on amd64 (bug #256599)

  02 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  cpufrequtils-005-r1.ebuild:
  stable x86, bug 256599

*cpufrequtils-005-r1 (21 Oct 2008)

  21 Oct 2008; Mike Frysinger <vapier@gentoo.org>
  files/cpufrequtils-init.d-005, +files/cpufrequtils-005-build.patch,
  +files/cpufrequtils-005-nls.patch, +cpufrequtils-005-r1.ebuild:
  Fix building against uClibc #205576 by Jos van der Ende. Fix init.d