@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX cpufrequtils-005-build.patch 844 RMD160 494f3e1c6681ac01e922bf4a527a8b89f878ea4b SHA1 1266a39a756ee9a2972a47d7b5b5833168146428 SHA256 5b33a052abab8cf33913ffbf649707a238ec4c13320985933552c1a8b0761f9a
 AUX cpufrequtils-005-nls.patch 1581 RMD160 614aee44a46cb01033c7c577711e9f07b70f824b SHA1 1072c513b41e5f43ef895f7d1c99eca3634ded3f SHA256 5ab12e4b5061b72e33c79ee15862db2127c0284532f6016064976c71772daf6e
@@ -11,14 +11,16 @@ AUX cpufrequtils-init.d-005 531 RMD160 4bca2bc3868c3ef73bf53f3bbd83bd4c4a7164f4 
 AUX cpufrequtils-init.d-006 861 RMD160 7131a3482242d83750c018d1a4f6f6ac31e2f74d SHA1 7c855d01b6d90fe4681c6403f829af823ea5954b SHA256 0fc8e824933d8af8fe19151b1603eba1141f6e5a1d32ad91df3fd810c4518ca5
 DIST cpufrequtils-005.tar.bz2 39013 RMD160 284b28792635f37a909cc4aaeb626e01936fe95a SHA1 4033b8bb54fbcf13a59d4444e0883160c5499ad1 SHA256 a2c5898cbea032decc6143e82577c2bd948d6d9e97cd09d458e67c92e248bebe
 DIST cpufrequtils-007.tar.bz2 51959 RMD160 f5ba085ad186456099c312d67d67351d5fd4592d SHA1 57c91f5ff2a2abf0e1fbf4aa881702b8846397a9 SHA256 8af517369ad8a8ac40a9e47abe2e1970a9249932ab336367aaf8f68cd979dbad
+DIST cpufrequtils-008.tar.bz2 52186 RMD160 21c1318bd31e2df8b5b6718860e55bf345ad71d4 SHA1 3b6d64dcde86bb6a53842ffb0483465113aac6af SHA256 1b9daa591d977679fb09ffb9b4d58afa94b9387f3c0be92ec077080e328130f1
 EBUILD cpufrequtils-005-r1.ebuild 1261 RMD160 c05e2849758aa5cd0a5a1560b1bde4c0efdba27d SHA1 7b421ada7beb267804814db9d0dd5b37d88b64f3 SHA256 bc2b10bbc66eb745ebc02e61c8d7e946905d02381cee30f6b063a4e631d2ee80
 EBUILD cpufrequtils-007.ebuild 1470 RMD160 31358699e4ad783295ccd5d2cb1c282a88ebdfb3 SHA1 ab6c1e0e591676aaea49623e91a89ff516dd510a SHA256 0316819c25b1f32411a311916a2a968244535594a845cd11f34d315202ae1cc1
-MISC ChangeLog 8896 RMD160 12e57981eeb2a4214c43b0ea3795267b286805b5 SHA1 8e6fc817a0705ed13431e1297e25d6a669886e76 SHA256 dc4fbc63b51323fbde529a61bda260901c47bf9ecc38ddb7166d5eaf8e42f226
+EBUILD cpufrequtils-008.ebuild 1474 RMD160 3244dc50626cc7d2061a981f042cd12f95048d7a SHA1 ce49373a1872e214dcfea848bc3ae92b6c6d73d6 SHA256 235f3ede346bb7d7753c19c4f08839f98114e52168ccb63401e56af76535e694
+MISC ChangeLog 9024 RMD160 4be000b54fffce62e464209517daa85983bec90d SHA1 48a01233d0727dd5653d9d82a953c980c8071ac7 SHA256 bfd65774ad2d3596bae5db775f49444b65cd203d777d1c0cc1a511a64b774d9d
 MISC metadata.xml 160 RMD160 8521c3bd3ae0fb2bfddce5edb33fd31e223747e1 SHA1 194b7194f38673fe427e5893a42cd4c1506ce846 SHA256 b13062a43e40469b137e1206494a44b45755ea69511b64e5373cb1ce30bbb160
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkuzv2UACgkQOypDUo0oQOps8ACgi+QCEnfk/h45oQE9f+FEQw2S
-TxIAn0SXgKil0crNkBkt0Kr2CCrA8nOf
-=Z6JC
+iF4EAREIAAYFAkwyNZIACgkQTwhj9JtAlp4pDgD+IxOiYqaxXpjRm2ygXQ6HZJK9
+f7wuZMQh+c9ktR0rrLYA/jZJimOyT87QroJTWSgIPbDSm9z936SrMZPNcjtF2z5K
+=rADn
 -----END PGP SIGNATURE-----
